# nanogpt-ish

./: .gitignore  Cargo.toml  README.md  gutenberg.py  pyproject.toml  vocab.json
src/: bigram.rs  bpe.rs  dataset.rs  gpt.rs  lib.rs  main.rs  sampling.rs  training.rs  transformer.rs
